// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly normally 1`] = `
<div
  class="modal-container"
  data-testid="choose-modal"
  style="display: flex;"
>
  <div
    class="modal"
  >
    <div
      class="icon-container"
    >
      <svg
        class="icon"
      >
        <use
          xlink:href="/Icons.svg#dragonborn"
        />
      </svg>
    </div>
    <div
      class="content-container"
    >
      <h2
        class="title"
      >
        Dragonborn
      </h2>
      <div
        class="modal-content-container"
      >
        <div
          class="descriptor"
          data-testid="descriptor"
        >
          <div
            aria-label="Breath Weapon"
            class="title"
            role="button"
            style="border-bottom-left-radius: 0.5rem; border-bottom-right-radius: 0.5rem;"
            tabindex="0"
          >
            Breath Weapon
            <svg
              aria-hidden="true"
              class="chevron"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
        <div
          class="descriptor"
          data-testid="descriptor"
        >
          <div
            aria-label="Damage Resistance"
            class="title"
            role="button"
            style="border-bottom-left-radius: 0.5rem; border-bottom-right-radius: 0.5rem;"
            tabindex="0"
          >
            Damage Resistance
            <svg
              aria-hidden="true"
              class="chevron"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
        <div
          class="descriptor"
          data-testid="descriptor"
        >
          <div
            aria-label="Draconic Ancestry"
            class="title"
            role="button"
            style="border-bottom-left-radius: 0.5rem; border-bottom-right-radius: 0.5rem;"
            tabindex="0"
          >
            Draconic Ancestry
            <svg
              aria-hidden="true"
              class="chevron"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="other-container"
    />
    <div
      class="buttons-container"
    >
      <button
        class="button positive"
        style="font-size: 2rem; padding: 1rem; margin: 0px; flex-grow: 1; display: flex; justify-content: center; align-items: center; border: 0px; border-radius: 0;"
        type="button"
      >
        Choose
      </button>
      <button
        class="button negative"
        style="font-size: 2rem; padding: 1rem; margin: 0px; flex-grow: 1; display: flex; justify-content: center; align-items: center; border: 0px; border-radius: 0;"
        type="button"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`renders correctly when error 1`] = `
<div
  class="modal-container"
  data-testid="choose-modal"
  style="display: flex;"
>
  <div
    class="modal"
  >
    <div
      class="icon-container"
    >
      <svg
        class="icon"
      >
        <use
          xlink:href="/Icons.svg#dragonborn"
        />
      </svg>
    </div>
    <div
      class="content-container"
    >
      <h2
        class="title"
      >
        Error
      </h2>
      <div
        class="modal-content-container"
      >
        <p
          class="error-message"
        >
          Could not load details
        </p>
      </div>
    </div>
    <div
      class="other-container"
    />
    <div
      class="buttons-container"
    >
      <button
        class="button positive"
        disabled=""
        style="font-size: 2rem; padding: 1rem; margin: 0px; flex-grow: 1; display: flex; justify-content: center; align-items: center; border: 0px; border-radius: 0;"
        type="button"
      >
        Choose
      </button>
      <button
        class="button negative"
        style="font-size: 2rem; padding: 1rem; margin: 0px; flex-grow: 1; display: flex; justify-content: center; align-items: center; border: 0px; border-radius: 0;"
        type="button"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`renders correctly when loading 1`] = `
<div
  class="modal-container"
  data-testid="choose-modal"
  style="display: flex;"
>
  <div
    class="modal"
  >
    <div
      class="icon-container"
    >
      <svg
        class="icon"
      >
        <use
          xlink:href="/Icons.svg#dragonborn"
        />
      </svg>
    </div>
    <div
      class="content-container"
    >
      <h2
        class="title"
      >
        Loading...
      </h2>
      <div
        class="modal-content-container"
        style="justify-content: center;"
      >
        <div
          class="container"
        >
          <svg
            class="icon"
          >
            <use
              xlink:href="/Icons.svg#spinner"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="other-container"
    />
    <div
      class="buttons-container"
    >
      <button
        class="button positive"
        disabled=""
        style="font-size: 2rem; padding: 1rem; margin: 0px; flex-grow: 1; display: flex; justify-content: center; align-items: center; border: 0px; border-radius: 0;"
        type="button"
      >
        Choose
      </button>
      <button
        class="button negative"
        style="font-size: 2rem; padding: 1rem; margin: 0px; flex-grow: 1; display: flex; justify-content: center; align-items: center; border: 0px; border-radius: 0;"
        type="button"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;
